item_show: extracting item data to their own view so that changes on the item doesn't re-render the entity part Also, preventing scroll jumps on re-render by setting a min-height to the view parent

--- a/app/modules/inventory/scss/_item_show.scss
+++ b/app/modules/inventory/scss/_item_show.scss
@@ -27,6 +27,10 @@
       }
     }
   }
+  #itemData{
+    flex: 1;
+  }
+  @import 'item_show_data';
   #entityData{
     #work, #edition{
       @extend .dark-panel;
@@ -49,93 +53,4 @@
   .button-group{
     margin-bottom: 1em;
   }
-  .itemData{
-    margin-bottom: 2em;
-    @include display-flex(row);
-    width: 100%;
-    padding-top: 0.5em;
-    label{
-      opacity: 0.6;
-    }
-    .leftBox{
-      min-width: 16em;
-      flex: 0 0 auto;
-      .item-settings{
-        @include display-flex(column);
-        label{
-          text-align: left;
-          width: 100%;
-        }
-        > div{
-          flex: 0 0 $user-box-heigth;
-          width: 100%;
-        }
-      }
-      .transactionPreview{
-        .showTransaction{
-          @include display-flex(row, center, space-between);
-          @include bg-hover($light-grey);
-          padding-right: 0.2em;
-          max-width: 15em;
-        }
-      }
-    }
-    .rightBox{
-      flex: 1 1 auto;
-      p{
-        margin: 0;
-        padding: 0;
-      }
-    }
-
-    /*Small screens*/
-    @media screen and (max-width: 700px) {
-      @include display-flex(column, center, center);
-      max-width: 30em;
-      padding: 0.5em;
-      .leftBox{
-        width: 100%;
-      }
-      .rightBox{
-        width: 100%;
-        // (1)
-        max-width: 100vw;
-      }
-    }
-    /*Large screens*/
-    @media screen and (min-width: 700px) {
-      @include display-flex(row, flex-start, center);
-      .leftBox{
-        max-width: 16em;
-        margin-right: 0.8em;
-        .item-settings{
-          width: 100%;
-        }
-      }
-      .rightBox{
-        // (1)
-        max-width: 33.1em;
-      }
-    }
-  }
-  .mainUserRequested{
-    // transactions are already listed in the transactionsRegion
-    display: none;
-  }
 }
-
-.noteBox{
-  a, span, label, p{
-    color: white;
-    &:hover{
-      color: white;
-    }
-  }
-}
-
-@import 'item_comments';
-@import 'item_transactions';
-
-// (1): hacky setting to force the paragraph to not expand beyond
-// what its parent should *normally* allow!
-// to be tested with irrealistically long words
